feat: PUT endpoint for update book selling
