# pertiv-backend/controllers/staff/books.controller.js
@@ -43,6 +43,16 @@ const addBookSelling = async (req, res, next) => {
       }),
     ]);
 
+    const categoriesQuery = await Promise.all(
+      categories.map(async (name) =>
+        prisma.categorySell.upsert({
+          where: { name },
+          update: {},
+          create: { name },
+        })
+      )
+    );
+
     await prisma.bookSelling.create({
       data: {
         title: title.toLowerCase(),
@@ -52,13 +62,11 @@ const addBookSelling = async (req, res, next) => {
         user_id: 'fa8c4b3e-6fc7-476a-afb7-98c30374625f', // STILL HARDCODE FOR ID STAFF
         publisher_id: publisher.id,
         writer_id: writer.id,
-        category: categories?.length
-          ? {
-              create: categories.map((category_id) => ({
-                categories: { connect: { id: category_id } },
-              })),
-            }
-          : undefined,
+        category: {
+          create: categoriesQuery.map((name) => ({
+            categories: { connect: { name: name.name } },
+          })),
+        },
       },
       include: {
         category: true,
@@ -140,8 +148,111 @@ const getDetailBookSelling = async (req, res, next) => {
   }
 };
 
+const updateBookSelling = async (req, res, next) => {
+  try {
+    const paramsId = req.params.id;
+    const {
+      title,
+      description,
+      language,
+      stock,
+      publisherName,
+      writerName,
+      categories,
+    } = req.body;
+
+    logger.info(
+      `Controller updateBookSelling - Updating Book Selling with ID : ${paramsId} - Title : ${title}`
+    );
+
+    const prisma = new PrismaClient();
+
+    const errors = validationResult(req);
+
+    if (!errors.isEmpty()) {
+      const error = new Error();
+      error.success = false;
+      error.statusCode = 400;
+      error.message = errors.array();
+      throw error;
+    }
+
+    const findBookSellingQuery = await prisma.bookSelling.findUnique({
+      where: { id: paramsId },
+    });
+
+    if (!findBookSellingQuery) {
+      const error = new Error('Staff account not found');
+      error.success = false;
+      error.statusCode = 404;
+      throw error;
+    }
+
+    const [publisher, writer] = await Promise.all([
+      prisma.publisher.upsert({
+        where: { name: publisherName },
+        update: {},
+        create: { name: publisherName },
+      }),
+      prisma.writer.upsert({
+        where: { name: writerName },
+        update: {},
+        create: { name: writerName },
+      }),
+    ]);
+
+    const categoriesQuery = await Promise.all(
+      categories.map(async (name) =>
+        prisma.categorySell.upsert({
+          where: { name },
+          update: {},
+          create: { name },
+        })
+      )
+    );
+
+    await prisma.bookSelling.update({
+      where: { id: paramsId },
+      data: {
+        title: title?.toLowerCase() || findBookSellingQuery.title,
+        description: description || findBookSellingQuery.description,
+        language: language || findBookSellingQuery.language,
+        stock: stock ?? findBookSellingQuery.stock,
+        publisher_id: publisher.id,
+        writer_id: writer.id,
+        category: {
+          deleteMany: {},
+          create: categoriesQuery.map((category) => ({
+            categories: { connect: { name: category.name } },
+          })),
+        },
+      },
+      include: {
+        category: true,
+      },
+    });
+
+    res.status(201).json({
+      success: true,
+      statusCode: 201,
+      message: 'Staff account updated successfully',
+    });
+  } catch (error) {
+    logger.error(
+      `ERROR Controller updateBookSelling - ${JSON.stringify(error)}`
+    );
+
+    if (!error.statusCode) {
+      error.statusCode = 500;
+      error.message = 'Internal Server Error';
+    }
+    next(error);
+  }
+};
+
 module.exports = {
   addBookSelling,
   getBooksSelling,
   getDetailBookSelling,
+  updateBookSelling,
 };
